# Riru-InternalBrowserRedirect

./: build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/ibr/: AppEditActivity.kt  MainActivity.kt  RuleViewerActivity.kt
app/src/main/java/com/github/kr328/ibr/adapters/: AppItemAdapter.kt
app/src/main/java/com/github/kr328/ibr/data/: OnlineRuleRemote.kt
app/src/main/java/com/github/kr328/ibr/utils/: SimpleRelativeHttpClient.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
hideapi/: build.gradle
hideapi/src/main/java/android/app/: IActivityManager.java  IActivityTaskManager.java
hideapi/src/main/java/android/os/: IClientCallback.java  IServiceCallback.java  IServiceManager.java  ServiceDebugInfo.java  ServiceManagerNative.java
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/raw/magisk/: customize.sh  module.prop  service.sh  uninstall.sh
remote/: build.gradle
remote/src/main/cpp/: CMakeLists.txt  hook.c  inject.c  inject.cc  inject.h  log.h  main.c  main.cc
remote/src/main/cpp/libriru_utils/: CMakeLists.txt  riru_utils.c  riru_utils.h
remote/src/main/cpp/libriru_utils/libxhook/: CMakeLists.txt
remote/src/main/java/com/github/kr328/ibr/remote/client/: BaseClientActivityManagerProxy.java  ClientInjector.java
remote/src/main/java/com/github/kr328/ibr/remote/proxy/: ServiceManagerProxy.java
shared/: build.gradle
